# shiro-frontend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html
.github/workflows/: docker.yaml  rust.yaml  static.yml
src/: components.rs  main.rs
src/components/: asset_balance_page.rs  asset_list_page.rs  asset_receive_page.rs  asset_send_page.rs  balance_page.rs  balance_tab.rs  bitcoin_page.rs  common.rs  fungible_list.rs  issue_asset_page.rs  mnemonic_list.rs  mnemonic_page.rs  nft_list.rs  utxos_list.rs  utxos_page.rs
src/css/: style.css
