[package]
name = "shiro-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.19" }
wasm-bindgen = "0.2.83"
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = "1.0.89"
anyhow = "1.0.66"
material-yew = { version = "0.2.0", features = ["full"] }
yew-router = "0.16.0"
