[package]
name = "shiro-frontend"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.28.0", default-features = false, features = ["std", "async-interface", "all-keys"] }
bip39 = { version = "2.0", features = ["rand"] }

yew = { version = "0.19" }
yew-router = "0.16.0"

getrandom = { version = "0.2", features = ["js"] }
gloo = "0.5.0"
gloo-storage = "0.2.0"
gloo-utils = "0.1.2"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
qrcode = "0.11"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = "1.0.89"
anyhow = "1.0.66"
material-yew = { version = "0.2.0", features = ["full"] }

log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [ "Document", "Window" ]
